--- a/css/home.css
+++ b/css/home.css
@@ -1,18 +1,22 @@
 body{
     text-align: center;
+
 }
+
 .posts{
     border-radius: 25px;
     border: 2px solid lightblue;
-
-    width: 30%;
-    height: 150px;
+    margin-left: 20%;
+    width: 60%;
+    height: 38%;
     margin-top: 3%;
 
 }
 
-
+.cont{
+    
+}
 #textBox{
-    width: 200px;
-    height: 100px;
+    width: 40%;
+    height: 35%;
 }
